force-app/main/default/objects/PassingTest__c/PassingTest__c.object-meta.xml
<CustomObject>
    <label>Passing Test</label>
    <nameField>
        <label>Passing Test Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Passing Tests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>