force-app/main/default/objects/PassingTest__c/fields/Test__c.field-meta.xml
<CustomField>
    <fullName>Test__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Test</label>
    <referenceTo>EmployeeTest__c</referenceTo>
    <relationshipLabel>Passing Tests</relationshipLabel>
    <relationshipName>PassingTests</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>