force-app/main/default/objects/PassingTest__c/fields/TestPassed__c.field-meta.xml
<CustomField>
    <fullName>TestPassed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test Passed</label>
    <type>Checkbox</type>
</CustomField>