force-app/main/default/objects/PassingTest__c/validationRules/EndDate_Must_Be_Bigger_Than_StartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>EndDate_Must_Be_Bigger_Than_StartDate</fullName>
    <active>true</active>
    <description>End date must be bigger than start date</description>
    <errorConditionFormula>EndDate__c &lt;=  StartDate__c</errorConditionFormula>
    <errorDisplayField>EndDate__c</errorDisplayField>
    <errorMessage>End date must be bigger than start date</errorMessage>
</ValidationRule>